# depre-buddy

./: PROJECT_PLAN.md  README.md  UPGRADE_PLAN.md  config.py  depre_buddy.rest  env-sample  main.py  pyproject.toml
static/: index.html
tools/: crisis_detection.py  phq9_assessment.py
