[project]
name = "depre-buddy"
version = "0.1.0"
description = "Depre Buddy Sequential Triage Agent"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.122.0",
    "pydantic-settings>=2.12.0",
    "pytest>=9.0.1",
    "pytest-asyncio>=1.3.0",
    "requests>=2.32.5",
    "uvicorn>=0.38.0",
]
